# hubmesh

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
benchmarks/: hippo_style.py  hotpotqa_loader.py  musique_loader.py  profile_query.py  run_hotpotqa.py  run_musique.py
examples/: multi_hop_demo.py  synthetic_demo.py
experiments/centrality_hnsw/: README.md  bench.py  centrality_hnsw.py  hnsw_mc.py  mini_hnsw.py  run_bench.py  run_mc.py  run_mnist.py  sanity_check.py
src/hubmesh/: __init__.py  chunking.py  entity_linker.py  graph.py  kg.py  kg_llm.py  packing.py  paths.py  planner.py  ppr.py  scoring.py  types.py
src/hubmesh/adapters/: __init__.py  base.py  chroma.py  inmemory.py  qdrant.py
tests/: test_chroma_adapter.py  test_planner.py  test_qdrant_adapter.py
